{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 712,
  "lineage": "084284d0-54bb-7b80-89da-38d4a94aaa47",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754358724719:loadbalancer/app/tf-lb-20200123232652935700000001/0e6f15f161aabb93",
            "arn_suffix": "app/tf-lb-20200123232652935700000001/0e6f15f161aabb93",
            "dns_name": "tf-lb-20200123232652935700000001-1172101657.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:754358724719:loadbalancer/app/tf-lb-20200123232652935700000001/0e6f15f161aabb93",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20200123232652935700000001",
            "security_groups": [
              "sg-07db613fc42c87d85"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a705f1508a0c81c"
              },
              {
                "subnet_id": "subnet-0a66120b3484c61f8"
              }
            ],
            "subnets": [
              "subnet-09a705f1508a0c81c",
              "subnet-0a66120b3484c61f8"
            ],
            "tags": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a15104846eada99b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipwan",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08556343e1823d5bb",
            "domain": "vpc",
            "id": "eipalloc-0ba366117a4008068",
            "network_interface": "eni-02a0de7ee07eacdb7",
            "private_dns": "ip-192-168-2-33.ec2.internal",
            "private_ip": "192.168.2.33",
            "public_dns": "ec2-52-45-222-193.compute-1.amazonaws.com",
            "public_ip": "52.45.222.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08e7d3e9435bb053a",
            "domain": "vpc",
            "id": "eipalloc-05d462426d3f5e5e3",
            "network_interface": "eni-0e17a909b834468f2",
            "private_dns": "ip-192-168-3-103.ec2.internal",
            "private_ip": "192.168.3.103",
            "public_dns": "ec2-35-170-155-122.compute-1.amazonaws.com",
            "public_ip": "35.170.155.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fea408f7a15e476e",
            "owner_id": "754358724719",
            "tags": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754358724719:listener/app/tf-lb-20200123232652935700000001/0e6f15f161aabb93/85c50db8ab05d90c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:754358724719:targetgroup/tg-test/54050b5962518079",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:754358724719:listener/app/tf-lb-20200123232652935700000001/0e6f15f161aabb93/85c50db8ab05d90c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:754358724719:loadbalancer/app/tf-lb-20200123232652935700000001/0e6f15f161aabb93",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.main-alb",
            "module.alb.aws_lb_target_group.tg-test"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:754358724719:targetgroup/tg-test/54050b5962518079",
            "arn_suffix": "targetgroup/tg-test/54050b5962518079",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:754358724719:targetgroup/tg-test/54050b5962518079",
            "lambda_multi_value_headers_enabled": false,
            "name": "tg-test",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "GW",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba366117a4008068",
            "id": "nat-085c44151c86bdeec",
            "network_interface_id": "eni-02a0de7ee07eacdb7",
            "private_ip": "192.168.2.33",
            "public_ip": "52.45.222.193",
            "subnet_id": "subnet-09a705f1508a0c81c"
          },
          "dependencies": [
            "module.network.aws_eip.ipwan",
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d462426d3f5e5e3",
            "id": "nat-0de55ccd322f3a547",
            "network_interface_id": "eni-0e17a909b834468f2",
            "private_ip": "192.168.3.103",
            "public_ip": "35.170.155.122",
            "subnet_id": "subnet-0a66120b3484c61f8"
          },
          "dependencies": [
            "module.network.aws_eip.ipwan",
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034493662feadca4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-085c44151c86bdeec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034493662feadca4b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_eip.ipwan",
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_nat_gateway.GW",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_point",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fea408f7a15e476e",
            "id": "r-rtb-0a2f4875415ecffef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2f4875415ecffef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG",
            "module.network.aws_route_table.route_table",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-034493662feadca4b",
            "owner_id": "754358724719",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-085c44151c86bdeec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a2f4875415ecffef",
            "owner_id": "754358724719",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fea408f7a15e476e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04831031a60424988",
            "route_table_id": "rtb-034493662feadca4b",
            "subnet_id": "subnet-059c6044dfcc0fe18"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0605a90aa81fa5850",
            "route_table_id": "rtb-0a2f4875415ecffef",
            "subnet_id": "subnet-09a705f1508a0c81c"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4bc03b55d97dd08",
            "route_table_id": "rtb-0a2f4875415ecffef",
            "subnet_id": "subnet-0a66120b3484c61f8"
          },
          "dependencies": [
            "module.network.aws_route_table.route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:security-group/sg-07db613fc42c87d85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07db613fc42c87d85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200123222337044100000003",
            "name_prefix": null,
            "owner_id": "754358724719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:security-group/sg-02a677e07ab3a5aaf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02a677e07ab3a5aaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200123222337024600000002",
            "name_prefix": null,
            "owner_id": "754358724719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:subnet/subnet-059c6044dfcc0fe18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-059c6044dfcc0fe18",
            "map_public_ip_on_launch": false,
            "owner_id": "754358724719",
            "tags": {
              "Name": "test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:subnet/subnet-09a705f1508a0c81c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-09a705f1508a0c81c",
            "map_public_ip_on_launch": true,
            "owner_id": "754358724719",
            "tags": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:subnet/subnet-0a66120b3484c61f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0a66120b3484c61f8",
            "map_public_ip_on_launch": true,
            "owner_id": "754358724719",
            "tags": {
              "Name": "Test"
            },
            "vpc_id": "vpc-0a15104846eada99b"
          },
          "dependencies": [
            "module.network.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754358724719:vpc/vpc-0a15104846eada99b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-089ec434a8ad29aea",
            "default_route_table_id": "rtb-0ac2e9693c16406bd",
            "default_security_group_id": "sg-0cad43d18ec0f8007",
            "dhcp_options_id": "dopt-5d877127",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a15104846eada99b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac2e9693c16406bd",
            "owner_id": "754358724719",
            "tags": {
              "Name": "Test"
            }
          }
        }
      ]
    }
  ]
}